--- a/multiple-comparison.qmd
+++ b/multiple-comparison.qmd
@@ -177,7 +177,7 @@ res_k20b <- replicate(10000,
 ```{r}
 mean(res_k20b)
 ```
-ファミリーの有意水準が0.49になった。1つひとつの検定で利用する`alpha`の値を「めったにない」と言えそうな5%にしても、全体では「めったにない」とは決して言えない52%に
+ファミリーの有意水準が0.49になった。1つひとつの検定で利用する`alpha`の値を「めったにない」と言えそうな5%にしても、全体では「めったにない」とは決して言えない49\%に
 なってしまっており、多重比較の調整が必要であることがわかる。
 
 そこで、ボンフェローニの方法で有意水準を補正する。
@@ -307,7 +307,7 @@ res_b <- replicate(10000,
 ```{r}
 mean(res_b)
 ```
-49.8%について、正しくない帰無仮説を棄却することに失敗している。
+49.3%について、正しくない帰無仮説を棄却することに失敗している。
 
 
 次に、ホルムの方法を試す。
